# blog

./: .gitignore  .gitmodules
circle_animation/: CMakeLists.txt  README.md  download_data.sh
circle_animation/cpp/src/: bind_pyb.cpp  circle_fragment.cpp  circle_fragment_instanced.cpp  circle_vertex.cpp  circle_vertex_instanced.cpp  shader_s.cpp  shader_s.hpp
circle_animation/img/: fragment.py  vertex.py
circle_animation/scripts/: mpl_collection.py  mpl_simple.py  opengl_fragment.py  opengl_fragment_instanced.py  opengl_vertex.py  opengl_vertex_instanced.py
circle_animation/shaders/: circle.vs  circle_exact.fs  circle_instanced.vs  circle_simple.fs
delaunay_area_overlap/: README.md  delaunay_area_overlap.py  triangle_clip.py  truncated_delaunay.py  view.py
fft_performance/: README.md  performance.py
